@startuml
'https://plantuml.com/class-diagram
hide circle
class SubscriptionsRepository <<interface>>


class Subscriptions {
    -startDate
    -endDate
    -paymentType
    -activeStatus
    -plan
    -user
}


class SubscriptionsViewMapper{
    +toSubscriptionsView(Subscription subscriptions):SubscriptionsView
}
class SubscriptionsController{
    cancelSubscription(WebRequest request):ResponseEntity<SubscriptionsView>
    }
class SubscriptionsService{
 +cancelSubscription(long desiredVersion,String username, String auth):Subscriptions

}




interface SubscriptionsRepository
{
+findByActiveStatus_ActiveAndUser(Boolean true, String username): Optional<Subscriptions>
+save(S entity) : <S extends Subscriptions>
+getUserFromOtherAPI(String name) : HttpResponse<String>
+getSubsFromOtherApi(String name,String auth) : HttpResponse<String>
+planExists(String plan,String auth,String resource): Subscriptions
}



SubscriptionsController ..> SubscriptionsService: uses >
SubscriptionsService ..> SubscriptionsRepository: uses >
SubscriptionsService ..> Subscriptions: uses >
SubscriptionsRepository ..> Subscriptions: < record
SubscriptionsController ..>SubscriptionsViewMapper: uses >
SubscriptionsController ..>SubscriptionsRepository: HTTP API Call <

@enduml


